# sima

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/sima/: Concepts.hpp  Matrix.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/demo/: HelloWorld.cpp
test/: HelloWorldTest.cpp
